added google auth and jwt auth
